<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/view"
    android:visibility="gone">

    <TextView
        style="@style/dialog_text_20sp"
        android:text="@string/off_internet_title"
        android:layout_marginTop="32dp"/>

    <TextView
        style="@style/dialog_sevice_17sp"
        android:gravity="center"
        android:layout_marginHorizontal="40dp"
        android:text="@string/off_internet_desc"/>

    <TextView
        android:id="@+id/update"
        style="@style/dialog_service_settings"
        android:text="@string/off_internet_btn"
        android:layout_marginBottom="16dp"
        android:visibility="invisible"/>
</LinearLayout>