<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_white"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/back_button"
            style="@style/back_image_but"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/scip_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/reg_text_skip"
            android:layout_alignParentEnd="true"
            android:text="@string/skip"
            />
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/reg_text_40sp"
        android:layout_marginTop="26dp"
        android:text="@string/enter_sms"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/reg_text_18sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sms_text"/>

</LinearLayout>