<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.auth.NewAuthFragment">

    <com.google.android.material.card.MaterialCardView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:strokeColor="@color/dark_blue"
        app:strokeWidth="1dp">

        <TextView
            android:id="@+id/buttonSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/light_white"
            android:fontFamily="@font/lato_light"
            android:paddingHorizontal="12dp"
            android:paddingVertical="5dp"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:textColor="@color/black_text_color"
            android:textSize="13sp" />

    </com.google.android.material.card.MaterialCardView>


    <TextView
        style="@style/reg_text_40sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/authorization" />

    <TextView
        style="@style/reg_text_18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/auth_create_or_enter_account" />

    <LinearLayout
        android:id="@+id/reg_accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkedPolitics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:button="@drawable/checkbox"
            android:checked="false" />

        <TextView
            android:id="@+id/policyCheck"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/lato_regular"
            android:paddingEnd="16dp"
            android:gravity="start"
            android:text="@string/reg_accept"
            android:textColor="@color/black"
            android:textSize="17sp"/>
    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAppleId"
        style="@style/mater_but_filled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/enter_apple_id"
        app:icon="@drawable/ic_apple"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        android:visibility="gone"
        app:iconTint="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonGoogleAccount"
        style="@style/mater_but_filled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/enter_google_account"
        app:icon="@drawable/ic_google"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/white" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:indeterminateTint="@color/white"
        android:maxWidth="30dp"
        android:minWidth="30dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/buttonNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/buttonNext" />


</LinearLayout>