<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/gradient_qr_code"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/header_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_black"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:text="@string/qr_code" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_semibold"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:text="@string/qr_code_desc"/>

    <FrameLayout
        android:layout_width="265dp"
        android:layout_height="265dp">

        <ImageView
            android:layout_width="265dp"
            android:layout_height="265dp"
            android:src="@drawable/qr_code_bg"/>

        <ImageView
            android:id="@+id/qr_code"
            android:layout_width="229dp"
            android:layout_height="229dp"
            android:layout_gravity="center" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>

    <TextView
        android:id="@+id/qr_code_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_semibold"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:text="@string/qr_code_count"/>

    <TextView
        android:id="@+id/qr_code_discount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_semibold"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginHorizontal="16dp"
        android:text="@string/qr_code_discount"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_semibold"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:text="@string/qr_code_desc_2"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="16dp"/>

</LinearLayout>