<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/light_white"
    android:padding="16dp">

    <TextView
        android:id="@+id/scip_text_view"
        style="@style/reg_text_skip"
        android:text="@string/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/reg_text_40sp"
        android:text="@string/reg_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp" />

    <TextView
        style="@style/reg_text_18sp"
        android:text="@string/reg_phone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:strokeColor="@color/dark_blue"
        app:strokeWidth="1dp"
        android:background="@color/light_white"
        app:cardElevation="0dp">


        <EditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:inputType="phone"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="17sp"
            android:background="@color/light_white"
            android:layout_marginStart="22dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:text="+"
            android:textColor="@color/gray"
            android:fontFamily="@font/lato_regular"
            android:background="@color/light_white"
            android:textSize="17sp"/>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/reg_accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkedPolitics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:button="@drawable/checkbox"
            android:checked="false"
            android:fontFamily="@font/sf_pro_display_regular"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/reg_accept"
            android:textColor="@color/black"
            android:textSize="17sp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_next"
        style="@style/mater_but_filled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingVertical="14dp"
        android:text="@string/sign_in" />

</LinearLayout>